# bayezier

./: .gitignore  LICENSE  NOTES.md  README.md  first_phase.md  pixi.toml
benchmarks/: README.md  compare.py  plot_diagnostics.py  plotting_results.py  run_evaluation.py  run_rust_py.py  run_rust_py_arrays.py
data/: README.md  convert_prnn.py  generate_sklearn_datasets.py  sample_test.csv  sample_train.csv
docs/: JointMh_sampler.md  Readme.md  Steps_for_sampling_parameters.md  Technical_details_sampling_parameters.md  python_binding.md
docs/Pseudo_code/: Inference.md  Precomputation.md  Training.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/pnn-cli/: Cargo.toml
rust/pnn-cli/src/: main.rs
rust/pnn-core/: Cargo.toml
rust/pnn-core/src/: diagnostics.rs  inference.rs  knn.rs  lib.rs  math.rs  model.rs  precompute.rs  predict.rs  types.rs
rust/pnn-core/tests/: knn_toy.rs  precompute_test.rs
rust/pnn-py/: Cargo.toml
rust/pnn-py/src/: lib.rs
scripts/rust/: Cargo.toml  benchmark_sum.rs
