[package]
name = "pnn-py"
version = "0.1.0"
edition = "2024"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[lib]
name = "pnn_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
pnn-core = { path = "../pnn-core" }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.22" }

[dev-dependencies]
tempfile = "3.12"

[package.metadata.maturin]
name = "pnn_py"
